--- a/BTO_Application/319_Frontend/src/notification/NewNotifications.css
+++ b/BTO_Application/319_Frontend/src/notification/NewNotifications.css
@@ -53,7 +53,7 @@
 /* General Page Container */
 .notifications-page-container {
     max-width: 1200px;
-    height: 100%; /* Full height */
+    height: 96%; /* Full height */
     display: flex;
     flex-direction: column;
     align-items: center; /* Center horizontally */
